--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "args": [
                 "build",
                 "${workspaceFolder}/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj",
-                "/property:GenerateFullPaths=true",
+                "/property:GenerateFullTopics=true",
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
@@ -20,7 +20,7 @@
             "args": [
                 "publish",
                 "${workspaceFolder}/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj",
-                "/property:GenerateFullPaths=true",
+                "/property:GenerateFullTopics=true",
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
@@ -33,7 +33,7 @@
                 "watch",
                 "run",
                 "${workspaceFolder}/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj",
-                "/property:GenerateFullPaths=true",
+                "/property:GenerateFullTopics=true",
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
