--- a/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
+++ b/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="6.0.0" />
 
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+
   </ItemGroup>
 
 </Project>
