--- a/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
+++ b/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
@@ -22,6 +22,9 @@
 
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
 
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.1.0-1.final" />
+
   </ItemGroup>
 
 </Project>
