--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
+      working-directory: ./src/bbt.service.notification-profile
       run: dotnet restore
     - name: Build
+      working-directory: ./src/bbt.service.notification-profile
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
