--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -39,6 +39,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - working-directory: ./src/bbt.service.notification-profile
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -54,6 +55,7 @@ jobs:
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
       uses: github/codeql-action/autobuild@v1
+      
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -68,3 +70,4 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
+      
