--- a/src/bbt.service.notification-profile/Dockerfile
+++ b/src/bbt.service.notification-profile/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
@@ -6,7 +6,8 @@ WORKDIR /app
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
+
 WORKDIR /src
 COPY ["bbt.service.notification-profile.csproj", "./"]
 RUN dotnet restore "bbt.service.notification-profile.csproj"
