--- a/src/bbt.service.notification-profile/appsettings.json
+++ b/src/bbt.service.notification-profile/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {       
-    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=XXXX; MultipleActiveResultSets=true"        
+    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true"        
   }
 }
