--- a/src/bbt.service.notification-profile/Dockerfile
+++ b/src/bbt.service.notification-profile/Dockerfile
@@ -3,8 +3,8 @@ WORKDIR /app
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-dotnet-configure-containers
-RUN adduser -u 5678 --disabled-password --gecos "" notificationuser && chown -R notificationuser /app
-USER notificationuser
+#RUN adduser -u 5678 --disabled-password --gecos "" notificationuser && chown -R notificationuser /app
+#USER notificationuser
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
 
