--- a/src/bbt.service.notification-profile/Dockerfile
+++ b/src/bbt.service.notification-profile/Dockerfile
@@ -21,4 +21,6 @@ RUN dotnet publish "bbt.service.notification-profile.csproj" -c Release -o /app/
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+EXPOSE 5000
+ENV ASPNETCORE_URLS=http://*:5000
 ENTRYPOINT ["dotnet", "bbt.service.notification-profile.dll"]
