appsettings.development update

--- a/src/bbt.service.notification-profile/appsettings.Development.json
+++ b/src/bbt.service.notification-profile/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {       
+    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true"        
   }
 }
+
