--- a/bbt.service.notification-profile.ui/appsettings.Development.json
+++ b/bbt.service.notification-profile.ui/appsettings.Development.json
@@ -7,14 +7,14 @@
   },
   "GeneralSettings": {
     "PathBase": "/",
-    "ApiUri": "https://localhost:7249",
+    "ApiUri": "ApiUrl",
     "SessionTimeoutInMinute": 10,
     "Debug": "true",
     "Name": "BurganBank"
 
   },
   "AllowedHosts": "*",
-  "ApiUri": "https://localhost:7249",
+  "ApiUri": "ApiUrl",
   "ProdSave": "true"
 }
 
