Login ve yetkilendirme işlemi

--- a/bbt.service.notification-profile.ui/appsettings.Development.json
+++ b/bbt.service.notification-profile.ui/appsettings.Development.json
@@ -15,7 +15,15 @@
   },
   "AllowedHosts": "*",
   "ApiUri": "ApiUrl",
-  "ProdSave": "true"
+  "ProdSave": "true",
+  "BaseUiUri": "BaseUrlUri",
+  "Okta": {
+    "OktaDomain": "DomainOkta",
+    "ClientId": "NotfIdClient",
+    "ClientSecret": "NotfSecretClient",
+    "AuthorizationServerId": "NotfAuthServer",
+    "TokenUrl": "NotfUrlToken"
+  }
 }
 
    
