--- a/bbt.service.notification-profile.ui/appsettings.Prod.json
+++ b/bbt.service.notification-profile.ui/appsettings.Prod.json
@@ -15,7 +15,15 @@
   },
   "AllowedHosts": "*",
   "ApiUri": "ApiUrl",
-  "ProdSave": "false"
+  "ProdSave": "false",
+  "BaseUiUri": "BaseUrlProdUri",
+  "Okta": {
+    "OktaDomain": "DomainProdOkta",
+    "ClientId": "NotfIdProdClient",
+    "ClientSecret": "NotfSecretProdClient",
+    "AuthorizationServerId": "NotfAuthProdServer",
+    "TokenUrl": "NotfUrlProdToken"
+  }
 }
 
    
