--- a/bbt.service.notification-profile.ui/bbt.service.notification.ui.csproj
+++ b/bbt.service.notification-profile.ui/bbt.service.notification.ui.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="6.0.8" />
+    <PackageReference Include="Okta.AspNetCore" Version="4.4.1" />
+    <PackageReference Include="Okta.Sdk" Version="6.0.1" />
     <PackageReference Include="Radzen.Blazor" Version="4.1.4" />
     <PackageReference Include="Refit" Version="6.3.2" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
