test seneryolarının aktarılması tfs pipeline çağırılması

--- a/src/bbt.service.notification-profile/appsettings.Development.json
+++ b/src/bbt.service.notification-profile/appsettings.Development.json
@@ -41,6 +41,12 @@
     "Name": "BurganBank"
 
   },
+  "TfsEndpoints": {
+
+    "PutVariables": "PutTfsVariableTest",
+    "CreateRelease": "CreateTfsReleaseTest"
+  },
+  "TfsToken": "TokenTfsTest",
 
   "DengageApi": {
     "Url": "DengageUrl",
