--- a/src/bbt.service.notification-profile/appsettings.Prod.json
+++ b/src/bbt.service.notification-profile/appsettings.Prod.json
@@ -24,6 +24,12 @@
       "TemplatePushBurgan": "TemplatePushUrlBurgan"
     }
   },
+  "TfsEndpoints": {
+
+    "PutVariables": "PutTfsVariableProd",
+    "CreateRelease": "CreateTfsReleaseProd"
+  },
+  "TfsToken": "TokenTfsProd",
   "RedisTimeout": 5,
   "RedisProductListTimeOut": 1440,
   "MetricsOptions": {
