--- a/src/bbt.service.notification-profile/appsettings.Prod.json
+++ b/src/bbt.service.notification-profile/appsettings.Prod.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true",
-    "ReminderConnectionString": "Server=server; User=ProdUser; password=ProdReminderPassword; database=db",
+    "ReminderConnectionString": "Server=ProdReminderServer; User=ProdUser; password=ProdReminderPassword; database=db",
     "RedisConnection": "redistest"
 
   },
