--- a/src/bbt.service.notification-profile/appsettings.Prod.json
+++ b/src/bbt.service.notification-profile/appsettings.Prod.json
@@ -65,7 +65,7 @@
     "SecretToken": "secretToken",
     "ServerUrl": "serverUrl",
     "ServiceName": "serviceName",
-    "Environment": "Prod",
+    "Environment": "Production",
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
