--- a/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
+++ b/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
+	<PackageReference Include="System.Drawing.Common" Version="5.0.3" />
 
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -45,7 +46,11 @@
 
 	  <PackageReference Include="Polly" Version="7.2.3" />
 	  <PackageReference Include="RestEase" Version="1.5.5" />
-	  <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+	  <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.3" />
+	  <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+	  <PackageReference Include="System.Net.Http" Version="4.3.4" />
+	  <PackageReference Include="System.Net.Security" Version="4.3.2" />
   </ItemGroup>
 
 </Project>
