--- a/src/bbt.service.notification-profile/appsettings.Development.json
+++ b/src/bbt.service.notification-profile/appsettings.Development.json
@@ -8,10 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true",
-    "ReminderConnectionString": "Server=server; User=user; password=TestReminderPassword; database=db",
+    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "ReminderConnectionString": "Server=server; User=user; password=TestReminderPassword; database=db;TrustServerCertificate=True",
     "RedisConnection": "redistest",
-    "ProdConnectionString": "Server=Prodlocalhost;Database=Reminder;User Id=ProdXXXX;Password=ProdYYYY;MultipleActiveResultSets=true"
+    "ProdConnectionString": "Server=Prodlocalhost;Database=Reminder;User Id=ProdXXXX;Password=ProdYYYY;MultipleActiveResultSets=true;TrustServerCertificate=True"
 
   },
   "NotificationProdEndPoint": "NotifProdEndPoint",
