--- a/src/bbt.service.notification-profile/appsettings.Prod.json
+++ b/src/bbt.service.notification-profile/appsettings.Prod.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true",
-    "ReminderConnectionString": "Server=server; User=ProdUser; password=ProdReminderPassword; database=db",
+    "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "ReminderConnectionString": "Server=server; User=ProdUser; password=ProdReminderPassword; database=db;TrustServerCertificate=True",
     "RedisConnection": "redistest"
 
   },
