--- a/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
+++ b/src/bbt.service.notification-profile/bbt.service.notification-profile.csproj
@@ -51,6 +51,7 @@
 	  <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	  <PackageReference Include="System.Net.Http" Version="4.3.4" />
 	  <PackageReference Include="System.Net.Security" Version="4.3.2" />
+	  <PackageReference Include="Azure.Identity" Version="1.11.4" />
   </ItemGroup>
 
 </Project>
