--- a/Dockerfile-notificationui
+++ b/Dockerfile-notificationui
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
@@ -6,9 +6,12 @@ WORKDIR /app
 RUN adduser -u 5679 --disabled-password --gecos "" notificationui-user && chown -R notificationui-user:notificationui-user /app
 USER notificationui-user
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
+
+ENV DOTNET_NUGET_SIGNATURE_VERIFICATION=false
+
 RUN pwd
 RUN ls
 COPY . .
