--- a/src/bbt.service.notification-profile/appsettings.Prod.json
+++ b/src/bbt.service.notification-profile/appsettings.Prod.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Database=Reminder; User Id=XXXX;Password=YYYY; MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "ReminderConnectionString": "Server=server; User=ProdUser; password=ProdReminderPassword; database=db;TrustServerCertificate=True",
+    "ReminderConnectionString": "Server=changeReminderServer; User=ProdUser; password=ProdReminderPassword; database=db;TrustServerCertificate=True",
     "RedisConnection": "redistest"
 
   },
@@ -63,7 +63,7 @@
   },
   "ElasticApm": {
     "SecretToken": "secretToken",
-    "ServerUrl": "serverUrl",
+    "ServerUrl": "changeApmUrl",
     "ServiceName": "serviceName",
     "Environment": "Production",
     "TransactionSampleRate": 1.0,
